Fix erase alignment and redundant html

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@
     --bg-primary: #212121;
 }
 
+button {
+    all: unset;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -17,10 +21,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: var(--bg-primary);
     color: var(--text-color);
-}
-
-button {
-    all: unset;
 }
 
 .support-info {
@@ -51,11 +51,6 @@ button {
 .h1-heading {
     font-size: 1.25rem;
     text-align: left;
-}
-    
-
-fieldset {
-    all: unset;
 }
 
 .btns-language-wrapper {
@@ -140,16 +135,17 @@ fieldset {
 }
 
 .keyboard {
-    font-size: 1.5rem;
-    margin-top: 2rem;
+    font-size: 1.25rem;
     max-width: inherit;
+    margin: 2rem 0.125rem 0 0.125rem;
 }
 
 .keyboard__row {
     display: flex;
     flex-flow: row wrap;
-    gap: 0.5rem;
+    gap: 0.25rem;
     justify-content: center;
+    align-items: stretch;
     margin-top: 1rem;
 }
 
@@ -159,16 +155,21 @@ fieldset {
     padding: 0.25rem;
     border-radius: 5px;
     font-weight: bold;
+    min-width: 22px;
+    height: 40px;
+    text-align: center;
 }
 
 .keyboard__row .backspace {
     padding: 0;
+    height: 48px;
 }
 .keyboard__row .backspace span {
-    display: block;
     width: 100%;
     height: 100%;
     padding: 0.25rem;
+    display: flex;
+    align-items: center;
 }
 
 @media (min-width: 768px) {
